--- a/style/mobile.portrait.css
+++ b/style/mobile.portrait.css
@@ -15,11 +15,153 @@
 
 #container{
 
-	width: 480px;
+	width: 359px;
 	margin: 0 auto; 
+}
+
+
+#myCanvas {
+              border: 1px solid #9C9898;
+      }
+
+body{
+
+	background: #FFFFFF; 
+	padding-top: 30%;
 
 }
 
-#myCanvas {
-        border: 1px solid #9C9898;
-      }
+h1{
+
+	font-weight: bold; 
+	font-size: 10px; 
+	font-family: Helvetica, sans-serif;
+}
+
+h2{
+
+	font-weight: bold; 
+	font-size: 8px; 
+	font-family: Helvetica, sans-serif;
+	
+
+}
+
+h3{
+
+	font-weight: bold; 
+	font-size: 12px; 
+	font-family: Helvetica, sans-serif;
+	
+
+}
+
+footer h5{
+	
+	font-weight: bold; 
+	font-size: 5px; 
+	font-family: Helvetica, sans-serif;
+	font: #fffff;
+	text-align: center;
+	padding: 5px 5px 5px 5px;
+
+}
+
+
+/* Content Specific Elements */
+
+#container{
+
+		width: 980px; 
+		margin: 0 auto; 
+		/*background-color: #C3D9FF;*/
+		background-color: #ffffff;
+
+}
+
+
+
+header{
+
+		height: 100px;
+		padding: 15px 15px 25px 15px; 
+		background-color: #4096EE;
+
+}
+
+nav{
+
+	float: right;
+	width: 250px;
+	padding: 10px 10px 10px 10px;
+
+}
+
+nav ul{
+
+	list-style-type:none;
+	margin:0;
+	padding:0;
+
+}
+
+nav li{
+
+	display:inline;
+}
+
+#main{
+
+	
+	width:  700px;
+	margin-top: 5px;
+	padding: 5px 5px 5px 5px;
+	float: left;
+
+}
+
+#about{
+
+	margin: 5px 5px 5px 5px;
+	padding: 5px 5px 5px 5px;
+	float: right;
+	width:  250px;
+}
+
+footer{
+
+	clear: both;
+	background-color: #4096EE;
+	padding: 5px 5px 5px 5px;
+	height: 25px;
+}
+
+/* Sub Classes */ 
+.bordered{
+	
+		margin: 1px solid black;
+
+}
+
+.div-head{
+
+	height: 25px;
+	background-color: #C3D9FF;
+	padding: 3px 3px 3px 3px;
+	text-align: center;
+	font-family: "Helvetica", sans-serif; 
+
+}
+
+.div-body{
+
+	border: 1px solid #000000; 
+	padding: 5px 5px 5px 5px; 
+	font-family: "Georgia", sans-serif; 
+
+}
+
+/* Specific Mods */
+
+
+
