Added to style for table, updates to Data

--- a/style/style.css
+++ b/style/style.css
@@ -141,6 +141,9 @@ footer{
 	padding: 5px 5px 5px 5px;
 	height: 25px;
 }
+table,td{
+	border: 1px solid #990000;
+}
 
 /* Sub Classes */ 
 .bordered{
