--- a/style/reset.css
+++ b/style/reset.css
@@ -23,6 +23,9 @@ article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;
 }
+table{
+	border: 1px solid #990000;
+}
 body {
 	line-height: 1;
 }
